--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nohtcoltd/symfony1",
+    "name": "clood-jp/symfony1",
     "description": "Fork of symfony 1.4 with dic, form enhancements, latest swiftmailer and better performance",
     "type": "library",
     "license": "MIT",
